src/gnomad_nuclear/snapshots/annonars__gnomad_nuclear__pbs__test__vep_from_string_indel.snap
---
source: src/gnomad_nuclear/pbs.rs
expression: vep
---
allele: A
consequence: frameshift_variant
impact: HIGH
symbol: PCSK9
gene: ENSG00000169174
feature_type: Transcript
feature: ENST00000452118
feature_biotype: protein_coding
exon: 4/6
intron: ~
hgvsc: "ENST00000452118.2:c.547_548insA"
hgvsp: "ENSP00000401598.2:p.Gly183GlufsTer23"
cdna_position: 627-628
cds_position: 547-548
protein_position: "183"
amino_acids: G/EX
codons: ggc/gAgc
existing_variation: rs527413419
dbsnp_id: "1"
distance: ~
strand: "1"
flags: ~
variant_class: insertion
minimised: "1"
symbol_source: HGNC
hgnc_id: "20001"
canonical: false
tsl: ~
appris: ~
ccds: ~
ensp: ENSP00000401598
swissprot: ~
trembl: B4DEZ9
uniparc: UPI00017A6F55
gene_pheno: "1"
sift: ~
polyphen: ~
domains: []
hgvs_offset: ~
gmaf: 0.0032
afr_maf: ~
amr_maf: 0.0113
eas_maf: 0.0014
eur_maf: 0
sas_maf: 0
aa_maf: 0
ea_maf: ~
exac_maf: ~
exac_adj_maf: ~
exac_afr_maf: ~
exac_amr_maf: ~
exac_eas_maf: ~
exac_fin_maf: ~
exac_nfe_maf: ~
exac_oth_maf: ~
exac_sas_maf: ~
clin_sig: ~
somatic: ~
pheno: ~
pubmed: ~
motif_name: ~
motif_pos: ~
high_inf_pos: ~
motif_score_change: ~
lof: HC
lof_filter: ~
lof_flags: ~
lof_info: "GERP_DIST:364.1444&BP_DIST:304&PERCENTILE:0.885113268608414&DIST_FROM_LAST_EXON:210&50_BP_RULE:PASS&PHYLOCSF_TOO_SHORT"

